--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_subdirectory(TextIO)
 add_subdirectory(LogIO)
 add_subdirectory(MeshIO)
+add_subdirectory(TimerIO)
 
 target_sources(sivtek PUBLIC
         ${CMAKE_CURRENT_LIST_DIR}/main.h
