--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,7 +54,7 @@ include(${VTK_USE_FILE})
 
 
 # |========================================================== Compiler Flags
-set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -g")
+set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -g -O3")
 
 
 # |========================================================== Directory Includes
