--- a/Source/MeshIO/MeshContinuum/CMakeLists.txt
+++ b/Source/MeshIO/MeshContinuum/CMakeLists.txt
@@ -1,3 +1,6 @@
+add_subdirectory(ParaviewFunctions)
+
+
 target_sources(sivtek PUBLIC
         ${CMAKE_CURRENT_LIST_DIR}/meshcontinuum.h
         ${CMAKE_CURRENT_LIST_DIR}/meshcontinuum_io_vtk.cc
