--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(MeshIO)
 add_subdirectory(TimerIO)
+add_subdirectory(TextIO)
 
 target_sources(sivtek PUBLIC
         ${CMAKE_CURRENT_LIST_DIR}/main.h
